--- a/Practice_2_ImageLink.html
+++ b/Practice_2_ImageLink.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <title>WeatherPy</title>
+  <head>
+    <title>HTML</title>
 </head>
-
 <body>
-  <section>
-    <h1>WeatherPy</h1>
-    <article>
-    <a target="_blank" href="assets/images/cloudymap.png">
-      <img src="assets/images/cloudymap.png" alt="Cloudy Map">
-    </a>
-    <p><em>Cloudy Map</em></p>
-    </article>
-    <hr>
-    <article>
-    <a target="_blank" href="assets/images/humiditymap.png">
-    <img src="assets/images/humiditymap.png" alt="Humidity Map">
-    </a>
-    <p><em>Humidity Map</em></p>
-    </article>
-    <hr>
-    <article>
-      <a href="assets/images/temperaturemap.png">
-      <img target="_blank" src="assets/images/temperaturemap.png" alt="Tempurature Map">
-      </a>
-      <p><em>Temperature Map</em></p>
-    </article>
-    <hr>
-    <!-- an example using figure/ficaption -->
-    <figure>
-      <a target="_blank" href="assets/images/windmap.png">
-      <img src="assets/images/windmap.png" alt="Wind Map">
-      </a>
-      <figcaption><em>Wind Map</em></figcaption>
-    </figure>
-  </section>
-</body>
+    <h1>HTML using VS </h1>
+    <p>Practice run on using HTML.
+                    <b>
+                                    Adding images and special effects
+                    </b>
+    </p>
+<h1>Adding image</h1>
+<img src="https://cdn.shopify.com/s/files/1/0182/2915/products/ArwenPreview_e857077c-c0f4-4a0e-acb3-b5fd12868a03_600x.jpg?v=1565973022" alt="Lord of the Rings">
 
+<p>Lord of the Rings image</p>
+  <p>Mustered how to do the basics</p>
+
+<h1>Adding videos</h1>
+<video controls autoplay name="media"> == $0
+   <source src="https://preview.redd.it/2ptlry249hf31.gif?width=640&format=mp4&s=550089b41f0abe448b20d4741fb680107f88912c">
+                   type="video/mp4"> == $0
+   </video>
+
+   <ul>
+    <li><strong>stackoverflow:</strong> <a href="#">https://stackoverflow.com/</a></li>
+    <li><strong>wolframalpha:</strong> <a href="#">https://www.wolframalpha.com</a></li>
+    <li><strong>HTML tag:</strong> <a href="#">https://www.w3schools.com/tags/tag_hr.asp</a></li>
+  </ul>
+
+  <table>
+    <tr>
+      <th>Books</th>
+      <th>Movies</th>
+      <th>Games</th>
+    </tr>
+    <tr>
+      <td>The Hobbit</td>
+      <td>Hot Fuzz</td>
+      <td>Dark Souls</td>
+    </tr>
+    <tr>
+      <td>The Name of the Wind</td>
+      <td>The Avengers</td>
+      <td>The Last of Us</td>
+    </tr>
+    <tr>
+      <td>The Girl With All the Gifts</td>
+      <td>The Matrix</td>
+      <td>Dragon Age: Origins</td>
+    </tr>
+  </table>
+
+</body>
 </html>
